--- a/index.qmd
+++ b/index.qmd
@@ -30,6 +30,8 @@ to edit)
 
 **Week 04:** Analysed the variables, selected and recoded for our model!
 
+**Week 05:** Refined the variables, as metadata and data were not matching!
+
 Nice effort!
 :::
 
@@ -65,12 +67,9 @@ Table 1
 
 |Veritable Name|Description|Seer Codes (2018-2022)|Recoding for modeling|
 |:------|:------ |:------------|:------------|
-|RX Summ–Surg Prim Site|Surgery of the primary site|00 = None; no surgical procedure of primary site; diagnosed at autopsy only 10-19 = Site-specific codes. Tumor destruction; no pathologic specimen or unknown whether there is a pathologic specimen<BR>20-80 = Site-specific codes. Resection; pathologic specimen 90 = Surgery, NOS. A surgical procedure to the primary site was done, but no information on the type of surgical procedure is provided.<BR>98 = Special codes for hematopoietic neoplasms; ill-defined sites; and unknown primaries (See site-specific codes for the sites and histologies), except death certificate only<BR>99 = Unknown if surgery performed|Binary:<br> 1 = any surgery (10-80, 90)<BR> 0 = no surgery (00)<BR> exclude other/unknown (98, 99)|
-|Phase I Radiation Treatment Modality<BR><BR>Phase II Radiation Treatment Modality<BR><BR>Phase III Radiation Treatment Modality|The radiation modality administered during the first, second and third phase of radiation treatment delivered during the first course of treatment.|00 = No radiation treatment<BR>01 = External beam, NOS<BR>02 = External beam, photons<BR>03 = External beam, protons<BR>04 = External beam, electrons<BR>05 = External beam, neutrons<BR>06 = External beam, carbon ions<BR>07 = Brachytherapy, NOS<BR>08 = Brachytherapy, intracavitary, LDR<BR>09 = Brachytherapy, intracavitary, HDR<BR>10 = Brachytherapy, Interstitial, LDR<BR>11 = Brachytherapy, Interstitial, HDR<BR>12 = Brachytherapy, electronic<BR>13 = Radioisotopes, NOS<BR>14 = Radioisotopes, Radium-232<BR>15 = Radioisotopes, Strontium-89<BR>16 = Radioisotopes, Strontium-90<BR>99 = Treatment radiation modality unknown; Unknown if radiation treatment administered|Binary: <BR>1 = any radiation (01, 02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16)<BR>0 = no radiation (00)<BR> exclude unknown (99)|
-|RX Summ–Chemo|The chemotherapy given as a part of the first course of treatment or the reason that chemotherapy was not given.|00 = None, chemotherapy was not part of the planned first course of therapy; diagnosed at autopsy<BR>01 Chemotherapy administered as first course therapy, but the type and number of agents is not documented in the patient record<BR>02 = Single agent chemotherapy administered as first course therapy<BR>03 = Multi-agent chemotherapy administered as first course therapy<BR>82 = Chemotherapy was not recommended/administered because it was contraindicated due to patient<BR>risk factors (comorbid conditions, advanced age, etc.)<BR>85 = Chemotherapy was not administered because the patient died prior to planned or recommended therapy<BR>86 = Chemotherapy was not administered. It was recommended by the patient’s physician but was not administered as part of the first course of therapy. No reason was stated in patient record.<BR>87 = Chemotherapy was not administered. It was recommended by the patient’s physician, but the treatment was refused by the patient, a patient’s family member, or the patient’s guardian. The refusal was noted in the patient record.<BR>88 = Chemotherapy was recommended, but it is unknown if it was administered<BR>99 = It is unknown whether a chemotherapeutic agent(s) was recommended or administered because it is not stated in the patient record|Binary: <BR>1 = any chemotherapy(01, 02, 03)<BR>0 = no chemotherapy (00)<BR>exclude other/unknown (82, 85, 86, 87, 88, 99)|
-|RX Summ--Hormone|Records therapy administered as first course treatment that affects cancer tissue by adding, blocking, or removing the action or production of hormones.|00 = None, hormone therapy was not part of the planned first course of therapy; not usually administered for this type and/or stage of cancer; diagnosed at autopsy only <BR>01 = Hormone therapy administered as first course therapy<BR>82 = Hormone therapy was not recommended/administered because it was contraindicated due to patient risk factors (comorbid conditions, advanced age, etc.)<BR>85 = Hormone therapy was not administered because the patient died prior to planned or recommended therapy<BR>86 = Hormone therapy was not administered. It was recommended by the patient’s physician but was not administered as part of the first course of therapy. No reason was stated in the patient record.<BR>87 = Hormone therapy was not administered. It was recommended by the patient’s physician, but this treatment was refused by the patient, a patient’s family member, or the patient’s guardian. The refusal was noted in the patient record.<BR>88 = Hormone therapy was recommended, but it is unknown if it was administered<BR>99 = It is unknown whether a hormonal agent(s) was recommended or administered|Binary: <BR>1 = hormone therapy received (01)<BR>0 = no hormone therapy received (00)<BR>exclude other unknown (82, 85, 86, 87, 88, 99)|
-|RX Summ–BRM|Records immunotherapeutic (biological therapy, biotherapy or biological response modifier) agents administered as first course of therapy.|00 = None, immunotherapy was not part of the planned first course of therapy<BR>01 = Immunotherapy was administered as first course therapy<BR>82 = Immunotherapy was not recommended/administered because it was contraindicated due to patient risk factors (comorbid conditions, advanced age, etc.)<BR>85 = Immunotherapy was not administered because the patient died prior to planned or recommended therapy<BR>86 = Immunotherapy was not administered; it was recommended by the patient’s physician but was not administered as part of the first-course of therapy. No reason was noted in the patient’s record.<BR> 87 = Immunotherapy was not administered. It was recommended by the patient’s physician, but this treatment was refused by the patient, a patient’s family member, or the patient’s guardian. The refusal was noted in the patient record.<BR> 88 = Immunotherapy was recommended, but it is unknown if it was administered<BR>99 = It is unknown if immunotherapy was recommended or administered because it is not stated in patient record.|Binary: <BR>1 = immunotherapy received (01)<BR>0 = no immunotherapy therapy received (00)<BR>exclude other unknown (82, 85, 86, 87, 88, 99)|
-|Sequence Number–Central|Describes the number and sequence of all reportable malignant, in situ, benign, and borderline primary tumors that occur over the lifetime of a patient.|00 = One primary in the patient’s lifetime <BR>01 = First of two or more primaries<BR>02 = Second of two or more primaries|Filter data to only include 00 and 01|
+|Radiation recode|Radiation of the primary site|Beam radiation<BR> Radioactive implants (includes brachytherapy) (1988+)<BR>Refused (1988+)<BR>Combination of beam with implants or isotopes<BR>None/Unknown|Binary: <BR>1 = any radiation [Beam radiation Radioactive implants (includes brachytherapy) (1988+), Refused (1988+),<BR>Combination of beam with implants or isotopes]<BR>0 = no radiation or unknown [None/Unknown]|
+|Chemotherapy recode|The chemotherapy given as a part of the first course of treatment or the reason that chemotherapy was not given.|Yes = patient had chemotherapy<BR>No/Unknown = no evidence of chemotherapy was found in the medical records examined|Binary: <BR>1 = any chemotherapy[Yes]<BR>0 = no chemotherapy [No/Unknown]|
+|Sequence number|Describes the number and sequence of all reportable malignant, in situ, benign, and borderline primary tumors that occur over the lifetime of a patient.|One primary only <BR>1st of 2 or more primaries <BR>2nd of 2 or more primaries etc.|Filter data to only include “One primary only” and “1st of 2 or more primaries”|
 
 
 
@@ -80,21 +79,19 @@ Table 2
 
 |Veritable Name|Description|Seer Codes (2018-2022)|Recoding for modeling|
 |:------|:------ |:------------|:------------|
-|Tumor Size Clinical|Size of a solid primary tumor before any treatment|000 = No mass/tumor found<BR>001 = 1 mm or described as less than 1 mm (0.1 cm or less than 0.1 cm)<BR>002-988 = Exact size in millimeters (2 mm to 988 mm) (0.2 to 98.8 cm)<BR>989 = 989 millimeters or larger (98.9 cm or larger)<BR>990 = Microscopic focus or foci only and no size of focus is given<BR>998 = Alternate descriptions of tumor size for specific sites:DiffuseBreast (C50.0-C50.6, C50.8-C50.9)<BR>999 = Unknown; size not stated Not documented in patient record Size of tumor cannot be assessed The only measurement(s) describes pieces or chips Not applicable|Continuous numeric <BR> unknowns excluded|
-|EOD Regional Nodes|Regional lymph nodes involved with cancer at the time of diagnosis.|000 = None<BR>800 = Regional lymph node(s), NOS Lymph node(s), NOS<BR>888 = Not applicable–e.g., CNS, hematopoietic<BR>999 = Unknown|Binary: <BR>1 = positive lymph nodes (800)<BR>0 = no positive lymph nodes (000)<BR>exclude other/unknown (888, 999)|
-|Mets at DX–Bone|This field identifies whether bone is an involved metastatic site.|0 = None; no bone metastases <BR>1 = Yes; distant bone metastases<BR>8 = Not applicable<BR>9 = Unknown whether bone is an involved metastatic site Not documented in patient record|Binary: <BR>1 = bone metastases (1)<BR>0 = no bone metastases (0)<BR> exclude n/a and unknown (8, 9)|
-|Mets at DX-Brain|This field identifies whether brain is an involved metastatic site.|0 = None; no brain metastases <BR>1 = Yes; distant brain metastases<BR>8 = Not applicable<BR>9 = Unknown whether brain is involved metastatic site Not documented in patient record|Binary: <BR>1 = brain metastases (1)<BR>0 = no brain metastases (0)<BR>exclude n/a and unknown (8, 9)|
-|Mets at DX-Liver|This field identifies whether liver is an involved metastatic site.|0 = None; no liver metastases <BR>1 = Yes; distant liver metastases<BR>8 = Not applicable<BR>9 = Unknown whether liver is involved metastatic site Not documented in patient record|Binary: <BR>1 = liver metastases (1)<BR>0 = no liver metastases (0)<BR> exclude n/a and unknown (8, 9)|
-|Mets at DX-Lung|This field identifies whether lung is an involved metastatic site.|0 = None; no lung metastases <BR>1 = Yes; distant lung metastases<BR>8 = Not applicable<BR>9 = Unknown whether lung is involved metastatic site Not documented in patient record|Binary: <BR>1 = lung metastases (1)<BR>0 = no lung metastases (0)<BR> exclude n/a and unknown (8, 9)|
-|Mets at DX-Distant LN|This field identifies whether distant lymph node(s) are an involved metastatic site.|0 = None; no distant lymph node metastases<BR>1 = Yes; distant lymph node metastases<BR>8 = Not applicable<BR>9 = Unknown whether distant lymph node(s) are involved metastatic site Not documented in patient record|Binary: <BR>1 = distant lymph node metastases (1)<BR>0 = no distant lymph node metastases (0)<BR> exclude n/a and unknown (8, 9)|
-|Derived Summary Stage 2018||0 = In situ <BR>1 = Localized<BR>2 = Regional, direct extension only<BR>3 = Regional, regional lymph nodes only<BR>4 = Regional, direct extension and regional lymph nodes<BR>7 = Distant<BR>8 = Benign, borderline<BR>9 = Unknown if extension or metastasis (unstaged, unknown, or unspecified) Death certificate only case|Categorical: <BR>0 = In situ <BR>1 = Localized <BR>2 = Regional, direct extension only<BR>3 = Regional,regional lymph nodes only<BR>4 = Regional, direct extension and regional lymph nodes<BR>7 = Distant <BR>exclude 8, 9|
-|Laterality||0 = Not a paired site <BR>1 = Right: origin of primary<BR>2 = Left: origin of primary <BR>3 = Only one side involved, right or left origin unspecified<BR>4 = Bilateral involvement at time of diagnosis, lateral origin unknown for a single primary; or both ovaries involved simultaneously, single histology; bilateral retinoblastomas; bilateral Wilms tumors<BR>5 = Paired site: midline tumor (effective with 01/01/2010 dx)<BR>9 = Paired site, but no information concerning laterality|Categorical:<BR>1 = Right (1)<BR>2 = Left (2)<BR>3 = Bilateral (4)<BR>4 = Midline (5)<BR>exclude unspecified/unknown (3, 9)<br>*exclude “not a paired site” breast is always paired (0)|
-|Grade Clinical|Records the grade of a solid primary tumor before any treatment|1 = G1: Low combined histologic grade (favorable), SBR score of 3–5 points<BR>2 = G2: Intermediate combined histologic grade (moderately favorable); SBR score of 6–7 points<BR>3 = G3: High combined histologic grade (unfavorable); SBR score of 8–9 points|Categorical: <BR>1 = G1<BR>2 = G2<BR>3 = G3<BR>exclude unknown (9)|
-|ER Summary|ER (Estrogen Receptor) Summary is a summary of results of the estrogen receptor (ER) assay.|0 = ER negative<BR>1 = ER positive<BR>7 = Test ordered, results not in chart<BR>9 = Not documented in medical record Cannot be determined (indeterminate) ER (Estrogen Receptor) Summary status not assessed or unknown if assessed|Binary: <BR>1 = ER positive (1)<BR>0 = ER negative (0)<BR>exclude n/a and unknown (7, 9)|
-|PR Summary|PR (Progesterone Receptor) Summary is a summary of results from the progesterone receptor (PR) assay.|0 = PR negative (0.0% or less than 1%) <BR>1 = PR positive<BR>7 = Test ordered, results not in chart<BR>9 = Not documented in medical record Cannot be determined (indeterminate) PR (Progesterone Receptor) Summary status not assessed or unknown if assessed|Binary: <BR>1 = PR positive (1)<BR>0 = PR negative (0)<Br>exclude n/a and unknown (7, 9)|
-|HER2 Overall Summary|HER2 Overall Summary is a summary of results from HER2 testing.|0 = HER2 negative; equivocal <BR>1 = HER2 positive<BR>7 = Test ordered, results not in chart<BR>8 = Not applicable: Information not collected for this case (If this item is required by your standard setter, use of code 8 will result in an edit error.)<BR>9 = Not documented in medical record Cannot be determined (indeterminate) HER2 Overall Summary status not assessed or unknown if assessed|Binary: <BR>1 = HER2 positive (1)<BR>0 = HER2 negative (0)<BR>exclude n/a and unknown (7, 8, 9)|
-
-
+|Tumor Size Summary (2016+)|Size of a solid primary tumor before any treatment|000 = No mass/tumor found<BR>001 = 1 mm or described as less than 1 mm (0.1 cm or less than 0.1 cm)<BR>002-988 = Exact size in millimeters (2 mm to 988 mm) (0.2 to 98.8 cm)<BR>989 = 989 millimeters or larger (98.9 cm or larger)<BR>990 = Microscopic focus or foci only and no size of focus is given<BR>998 = Alternate descriptions of tumor size for specific sites: Diffuse Breast (C50.0-C50.6, C50.8-C50.9)<BR>999 = Unknown; size not stated, Not documented in patient record, Size of tumor cannot be assessed, The only measurement(s) describes pieces or chips, Not applicable|Continuous numeric|
+|Combined Summary Stage with Expanded Regional Codes (2004+)|Cancer staging system that categorizes the extent of cancer spread from its point of origin using a combination of clinical and pathological data.|In situ<BR>Localized only<BR>Regional by direct extension only <BR>Regional lymph nodes involved only<BR>Regional by both direct extension and lymph node involvement<BR>Distant site(s)/node(s) involved <BR>Unknown/unstaged/unspecified/DCO|Categorical: <BR>In situ<BR>Localized only<BR>Regional by direct extension only<BR>Regional lymph nodes involved only<BR>Regional by both direct extension and lymph node involvement<BR>Distant site(s)/node(s) involved<BR>Unknown/unstaged/unspecified/DCO|
+|EOD Regional Nodes Recode (2018+)|Records the farthest regional lymph node chain involved by a tumor|000 = No clinical regional lymph node involvement<BR>030 = PATHOLOGICAL, ITCs only (malignant cell clusters no larger than 0.2 mm) in regional lymph node(s)<BR>050 = PATHOLOGICAL, Positive molecular findings by reverse transcriptase polymerase chain reaction (RT-PCR), no ITCs detected<BR>070 = No regional lymph node involvement pathologically (lymph nodes removed and pathologically negative) WITHOUT ITCs or ITC testing unknown<BR>100 = Micrometastasis, less than or equal to 2 mm, Axillary (level I and II) lymph node(s), ipsilateral, Detected by IHC or H&E (At least one micrometastasis greater than 0.2 mm or more than 200 cells), Micrometastasis, NOS<BR>150 = CLINICAL, Clinically positive movable axillary (level I and II) lymph node(s), ipsilateral, Positive needle core biopsy/FNA<BR>200 = PATHOLOGICAL, Positive axillary (level I and II) lymph node(s), ipsilateral, WITH more than micrometastasis (At least one metastasis greater than 2 mm, or size of metastasis not stated), WITHOUT internal mammary lymph node(s) or not stated<BR>250 = PATHOLOGICAL, Internal mammary node(s), ipsilateral, positive on sentinel node biopsy but not clinically apparent (No positive imaging or clinical exam) WITHOUT axillary lymph node(s), ipsilateral<BR>300 = PATHOLOGICAL, Internal mammary node(s), ipsilateral, positive on sentinel node biopsy but not clinically apparent (No positive imaging or clinical exam) WITH axillary lymph node(s), ipsilateral<BR>350 = CLINICAL, Fixed/matted ipsilateral axillary (level I and II)<BR>400 = CLINICAL, Internal mammary node(s), ipsilateral WITHOUT axillary (level I and II) lymph node(s), ipsilateral RN<BR>500 = Infraclavicular lymph node(s) (subclavicular) (level III axillary node(s)) (apical), ipsilateral WITH or WITHOUT axillary (level I and II) nodes(s) WITHOUT internal mammary node<BR>600 = Internal mammary node(s), ipsilateral, clinically apparent (On imaging or clinical exam) WITH axillary (level I, II, or III) lymph node(s), ipsilateral including infraclavicular<BR>700 = Supraclavicular node(s), ipsilateral<BR>800 = Regional lymph node(s), NOS, Lymph node(s), NOS<BR>999 = Unknown; regional lymph node(s) not stated, Regional lymph node(s) cannot be assessed, Not documented in patient record, Death Certificate Only|Categorical:<BR>N0 = 000, 030, 050, 070<BR>N1 = 100, 150, 200, 250, 300<BR>N2 = 350, 400<BR>N3 = 500, 600, 700<BR>NX = 800, 999|
+|SEER Combined Mets at DX-bone (2010+)|This field identifies whether bone is an involved metastatic site.|No = no bone metastases<BR>Yes = yes distant bone metastases<BR>N/A Unknown|Binary: <BR>No = no bone metastases<BR>Yes = yes distant bone metastases<BR>*exclude N/A and Unknown|
+|SEER Combined Mets at DX-brain (2010+)|This field identifies whether brain is an involved metastatic site.|No = no brain metastases<BR>Yes = yes distant brain metastases<BR>N/A Unknown|Binary: <BR>No = no brain metastases<BR>Yes = yes distant brain metastases<BR>*exclude N/A and Unknown|
+|SEER Combined Mets at DX-liver (2010+)|This field identifies whether liver is an involved metastatic site.|No = no liver metastases<BR>Yes = yes distant liver metastases<BR>N/A Unknown|Binary: <BR>No = no liver metastases<BR>Yes = yes distant liver metastases<BR>*exclude N/A and Unknown|
+|SEER Combined Mets at DX-lung (2010+)|This field identifies whether lung is an involved metastatic site.|No = no lung metastases<BR>Yes = yes distant lung metastases<BR>N/A Unknown|Binary: <BR>No = no lung metastases<BR>Yes = yes distant lung metastases<BR>*exclude N/A and Unknown|
+|Mets at DX-Distant LN|This field identifies whether distant lymph node(s) are an involved metastatic site.|No = no distant lymph node metastases<BR>Yes = yes distant lymph node metastases<BR>N/A Unknown|Binary: <BR>No = no distant lymph node metastases<BR>Yes = yes distant lymph node metastases<BR>*exclude N/A and Unknown|
+|Laterality|Describes the side of a paired organ or side of the body on which the reportable tumor originated.|Right - origin of primary <BR>Left - origin of primary<BR>Only one side - side unspecified<BR>Bilateral, single primary <BR>Paired site, but no information concerning laterality|Categorical:<BR>Right - origin of primary<BR>Left - origin of primary<BR>Bilateral, single primary <BR>*exclude “Only one side - side unspecified Bilateral, single primary” and “Paired site, but no information concerning laterality”|
+|Grade Clinical (2018+)|Records the grade of a solid primary tumor before any treatment|1 = G1: Low combined histologic grade (favorable), SBR score of 3–5 points<BR>2 = G2: Intermediate combined histologic grade (moderately favorable); SBR score of 6–7 points<BR>3 = G3: High combined histologic grade (unfavorable); SBR score of 8–9 points<BR>L = Nuclear Grade I (Low) (in situ only)<BR>M = Nuclear Grade II (interMediate) (in situ only)<BR>H = Nuclear Grade III (High) (in situ only)<BR>A = Well differentiated<BR>B = Moderately differentiated<BR> C = Poorly differentiated<BR>D = Undifferentiated, anaplastic<BR>8 = Not applicable (Hematopoietic neoplasms only)<BR>9 = Grade cannot be assessed (GX); Unknown|Categorical: <BR>Low = 1, A, L<BR>Intermediate = 2, B, M<BR>High = 3, C, H, D<BR>*exclude N/A (8) and unknown (9)|
+|ER Status Recode Breast Cancer (1990+)|Results of the estrogen receptor (ER) assay|Negative<BR>Positive<BR>Borderline/Unknown<BR>Recode not available|Binary: <BR>Negative<BR>Positive<BR>*exclude Borderline/Unknown, Recode not available|
+|PR Status Recode Breast Cancer (1990+)|Results from the progesterone receptor (PR) assay|Negative<BR>Positive<BR>Borderline/Unknown<BR>Recode not available|Binary: <BR>Negative<BR>Positive<BR>*exclude Borderline/Unknown, Recode not available|
+|HER2 Overall Summary Recode (2018+)|Summary of results from HER2 testing|HER2 negative; equivocal<BR>HER2 positive<BR>Test ordered, results not in chart<BR>Not documented; Cannot be determined; Not assessed or unknown if assessed|Binary: <BR>HER2 negative; equivocal<BR>HER2 positive<BR>*exclude Test ordered, results not in chart, Not documented; Cannot be determined; Not assessed or unknown if assessed|
 
 Table 3
 
@@ -102,10 +99,14 @@ Table 3
 
 |Veritable Name|Description|Seer Codes (2018-2022)|Recoding for modeling|
 |:------|:------ |:------------|:------------|
-|Age at Diagnosis|This data item represents the age of the patient at diagnosis for this cancer.|000 Less than one year old <BR>001 One year old, but less than two years old<BR>002 Two years old (Actual age in years) <BR>101 One hundred one years old <BR>120 One hundred twenty years old<BR>999 Unknown age||
-|Race 1, Race 2, Race 3, Race 4, Race 5|The five race fields (Race 1 – Race 5) make it possible to code multiple races for one person, consistent with the 2000 Census.|01 White<BR>02 Black<BR>03 American Indian, Aleutian, Alaskan Native or Eskimo (includes all indigenous populations of the western hemisphere)<BR>04 Chinese<BR>05 Japanese<BR>06 Filipino<BR>07 Hawaiian<BR>08 Korean<BR>10 Vietnamese<BR>11 Laotian<BR>12 Hmong<Br>13 Kampuchean (including Khmer and Cambodian)<BR>14 Thai<BR>15 Asian Indian or Pakistani, NOS (Effective with 01/01/2010 dx)<BR>16 Asian Indian (Effective with 01/01/2010 dx)<BR>17 Pakistani (Effective with 01/01/2010 dx)<BR>20 Micronesian, NOS<BR>21 Chamorro/Chamoru<BR>22 Guamanian, NOS<BR>25 Polynesian, NOS<BR>26 Tahitian<BR>27 Samoan<BR>28 Tongan<BR>30 Melanesian, NOS<BR>31 Fiji Islander<BR>32 New Guinean<BR>88 No additional races (Race 2 – Race 5)<BR>96 Other Asian, including Asian, NOS and Oriental, NOS<BR>97 Pacific Islander, NOS<BR>98 Other<BR>99 Unknown||
-|Marital Status at DX|Patient’s marital status at the time of diagnosis for the reportable tumor.|1 Single (never married)<BR>2 Married (including common law)<BR>3 Separated<BR>4 Divorced<BR>5 Widowed<BR>6 Unmarried or Domestic Partner (same sex or opposite sex, registered or unregistered, other than common law marriage) (effective for cases diagnosed 01/01/11 and forward)<BR>9 Unknown||
-|Primary Payer at DX|Identifies the patient’s primary health insurance carrier or method of payment at the time of initial diagnosis and/or treatment.|01 Not insured Patient has no insurance and is declared a charity write-off<BR>02 Not insured, self-pay Patient has no insurance and is declared responsible for charges<BR>10 Insurance, NOS Type of insurance is unknown or other than types listed in codes 20, 21,31, 35, 60-68<BR>20 Private Insurance:Managed care, HMO,or PPO An organized system of prepaid care for a group of enrollees usually within a defined geographic area. Generally formed as one of four types: a group model, an independent physician association (IPA), a network, or a staff model. “Gate-keeper model” is another term for describing this type of insurance.<BR>21 Private Insurance: Fee-for-service An insurance plan that does not have negotiated fee structure with the participating hospital. Type of insurance plan not coded as 20.<BR>31 Medicaid State government administered insurance for persons who are uninsured, below the poverty level, or covered under entitlement programs Medicaid other than Medicaid described in code 35<BR>35 Medicaid – administered through a Managed Care plan Patient is enrolled in Medicaid through a Managed Care program (e.g., HMO or PPO). The managed care plan pays for all incurred costs.<BR>60 Medicare/Medicare,NOS Federal government funded insurance for persons who are 62 years of age or older, or are chronically disabled (social security insurance eligible). Includes Medicare without supplement. Not described in codes 61, 62, or 63.<BR>61 Medicare with supplement, NOS Patient has Medicare and another type of unspecified insurance to pay costs not covered by Medicare. (See also, codes 63 and 64.)<BR>62 Medicare – Administered through a Managed Care Plan Patient is enrolled in Medicare through a Managed Care plan (e.g., HMO or PPO). The Managed Care plan pays for all incurred costs. <BR>63 Medicare with private supplement Patient has Medicare and private insurance to pay costs not covered by Medicare.<BR>64 Medicare with Medicaid eligibility Federal government Medicare insurance with state-administered Medicaid supplement.<BR>65 TRICARE Department of Defense program providing supplementary civilian- sector hospital and medical services beyond a military treatment facility to military dependents, retirees, and their dependents Formerly known as CHAMPUS (Civilian Health and Medical Program of the Uniformed Services).<BR>66 Military Military personnel or their dependents treated at a military facility<BR>67 Veterans Affairs Veterans treated in Department of Veterans Affairs facilities <BR>68 Indian/Public Health Service Patient receives care at an Indian Health Service facility or at another facility and medical costs are reimbursed by the Indian Health Service Patient receives care at a Public Health Service facility or at another facility, and medical costs are reimbursed by the Public Health Service Section III: Demographic Information 76SEER Program Coding and Staging Manual 2018 Code Label Definition<BR>99 Insurance status unknown Patient’s medical record does not indicate whether or not the patient is insured||
+|Age recode with <1 year olds|This data item represents the age of the patient at diagnosis for this cancer.|00 years <BR>01-04 years<BR>05-09 years<BR>10-14 years<BR>15-19 years<BR>20-24 years<BR>25-29 years <BR>30-34 years<BR>35-39 years<BR>40-44 years<BR>45-49 years <BR>50-54 years<BR>55-59 years<BR>60-64 years<BR>65-69 years<BR>70-74 years<BR>75-79 years<BR>80-84 years<BR>85+ years|Categorical: <BR>00 years <BR>01-04 years<BR>05-09 years<BR>10-14 years<BR>15-19 years<BR>20-24 years<BR>25-29 years <BR>30-34 years<BR>35-39 years<BR>40-44 years<BR>45-49 years <BR>50-54 years<BR>55-59 years<BR>60-64 years<BR>65-69 years<BR>70-74 years<BR>75-79 years<BR>80-84 years<BR>85+ years|"
+|Sex|Male or Female|Male<BR>Female|Binary: <BR>Male <BR>Female|
+|Race recode (W, B, AI, API)|Groups race into the following categories: White (W), Black (B), American Indian/Alaska Native (AI), and Asian/Pacific Islander (API)|White<BR>Black <BR>American Indian/Alaska Native<BR>Asian/Pacific Islander <BR>Unknown|Categorical: <BR>White<BR>Black <BR>American Indian/Alaska Native<BR>Asian/Pacific Islander <BR>Unknown|
+|Origin recode NHIA (Hispanic, Non-Hisp)|Classifies cancer registry patients into one of two categories: Hispanic or Non-Hispanic, using the NAACCR Hispanic Identification Algorithm (NHIA)|Non-Spanish-Hispanic-Latino<BR>Spanish-Hispanic-Latino|Categorical: <BR>Non-Spanish-Hispanic-Latino<BR>Spanish-Hispanic-Latino|
+|Race and origin recode (NHW, NHB, NHAIAN, NHAPI, Hispanic)|Combines race and Hispanic ethnicity for analysis, creating a single variable for Non-Hispanic White (NHW), Non-Hispanic Black (NHB), Non-Hispanic American Indian/Alaska Native (NHAIAN), Non-Hispanic Asian/Pacific Islander (NHAPI), and Hispanic (of any race) categories|Hispanic (All Races)<BR>Non-Hispanic White<BR>Non-Hispanic Black<BR>Non-Hispanic American Indian/Alaska Native<BR>Non-Hispanic Asian or Pacific Islander<BR>Non-Hispanic Unknown Race|Categorical: <BR>Non-Spanish-Hispanic-Latino<BR>Spanish-Hispanic-Latino|
+|Marital status at diagnosis|Patient’s marital status at the time of diagnosis for the reportable tumor|Single (never married) <BR>Married (including common law)<BR>Separated<BR>Divorced<BR>Widowed<BR>Unmarried or Domestic Partner <BR>Unknown|Binary:<BR>Partnered = Married (including common law), Unmarried or Domestic Partner <BR>Unpartnered = Single (never married), Separated, Divorced, Widowed<BR>*exclude Unknown|
+|Type of Reporting Source|Identifies the source documents that provided the most complete information when abstracting the case|Hospital inpatient/outpatient or clinic<BR>Radiation treatment or medical oncology center (2006+)<BR>Laboratory only (hospital or private)<BR>Physicians office/private medical practitioner (LMD)<BR>Nursing/convalescent home/hospice<BR>Autopsy Only<BR>Death Certificate Only<BR>Other hospital outpatient unit or surgery center (2006+)|Categorical: <BR>Hospital inpatient/outpatient or clinic<BR>Radiation treatment or medical oncology center (2006+)<BR>Laboratory only (hospital or private)<BR>Physicians office/private medical practitioner (LMD)<BR>Nursing/convalescent home/hospice<BR>Autopsy Only<BR>Death Certificate Only<BR>Other hospital outpatient unit or surgery center (2006+)|
+|Year of Diagnosis|Cancers diagnosed from 2018-2022|2018<BR>2019<BR>2021<BR>2022|Categorical: <BR>2018<BR>2019<BR>2021<BR>2022|
 
 
 Only female breast cancer cases (C50.0–C50.9) diagnosed from 2018–2021 were included.
