--- a/index.qmd
+++ b/index.qmd
@@ -33,6 +33,8 @@ Slides: [slides.html](slides.html){target="_blank"} ( Go to `slides.qmd` to edit
 
 **Week 06:** Started coding in R studio!
 
+**Week 07:** Applied Lasso regression on two outcome - radiation and chemotherapy!
+
 Nice effort!
 :::
 
@@ -59,7 +61,11 @@ After considering the multiple impactful applications of Lasso regression, this 
 
 The data for this study was obtained from the SEER program of the [National Cancer Institute (NCI)](https://seer.cancer.gov/archive/manuals/2018/SPCSM_2018_maindoc.pdf). SEER is a comprehensive population-based cancer registry within the United States that consists of a collection of detailed information on cancer incidence, patient demographics, tumor characteristics, treatment modalities and survival outcomes. The SEER dataset provides high quality, standardized data that allows for large-scale analyses of cancer patterns, treatments and outcomes across diverse populations in the United States. For this study we focused on female breast cancer cases (ICD O-3 site codes C50.0 - C50.9) from 2018 - 2021 and specific variables to indicate whether a patient received specific treatment such as surgery, radiation, chemotherapy, immunotherapy or hormone therapy based on the SEER treatment summary fields. This time period aligns with the period following SEER’s transition to the Extent of Disease (EOD) 2018 and Summary Stage 2018 systems. This time was chosen because these years provide the most consistent and comprehensive recording of tumor stage, biological markers and treatment variables. Using 2018 - 2021 ensures compatibility across staging and treatment codes while avoiding inconsistencies in earlier datasets.
 
-We focused on variables that are clinically relevant and have been shown to influence treatment decisions in breast cancer. These variables have been categorized into three groups: treatment variables, tumor characteristics and patient demographics. Surgical treatment was identified using the variable **RX Sum–Surg Prim Site**, radiation therapy from **Phase I, II and III Radiation Treatment Modality**, chemotherapy from **RX Summ–Chemo**, hormone therapy from **RX Summ–Hormone** and immunotherapy from **RX Summ–BRM**. These variables capture first-course treatments administered after diagnosis. Only first primary malignancies were included to avoid confounding from prior cancer diagnoses and treatments **(Sequence number = 00, 01)**. Patients with missing or unknown treatment or key staging information were excluded. Each treatment variable was recoded into a binary outcome with 1 indicating that treatment was received and 0 indicating that treatment was not received. 
+We focused on variables that are clinically relevant and have been shown to influence treatment decisions in breast cancer. These variables have been categorized into three groups: treatment variables, tumor characteristics and patient demographics. Radiation therapy was identified using the variable Radiation recode and chemotherapy from Chemotherapy recode. These variables capture first-course treatments administered after diagnosis. Only first primary malignancies were included to avoid confounding from prior cancer diagnoses and treatments. Patients with missing or unknown key staging information were excluded. Each treatment variable was recoded into a binary outcome with 1 indicating that treatment was received and 0 indicating that treatment was not received or unknown. 
+
+The tumor characteristic variables capture the biological and clinical features of each breast cancer case and are significant determinants of prognosis and treatment selection. Tumor size was included as a continuous numeric variable representing the largest tumor dimension in millimeters prior to treatment. Summary stage, based on the Combined Summary Stage with Expanded Regional Codes, categorized disease extent from in situ to distant spread, providing an overall measure of progression. Nodal involvement, recoded from the EOD Regional Nodes variable, was grouped into N0-N3 categories reflecting increasing lymphatic spread. Metastatic indicators for bone, brain, liver, lung and distant lymph nodes were each recoded as binary variables to identify the presence or absence of distant disease. Laterality identified the side of origin (left or right breast), while Clinical Grade summarized tumor differentiation as low, intermediate or high. Hormone receptor and HER2 status (ER, PR, HER2) were each treated as binary variables (positive or negative) and used to characterize molecular subtypes relevant to therapy decisions. Collectively, these variables provide a detailed picture of tumor biology and stage at diagnosis.
+
+Patient demographic variables describe the population characteristics of the sample and help identify disparities in presentation or treatment. Age at diagnosis was grouped into 5-year intervals and treated as an ordinal categorical variable. Sex was coded as a binary variable (male/female). Race, Hispanic origin and the combined race/ethnicity recode were included as categorical variables to capture sociodemographic diversity and potential disparities. Marital status as diagnosis was collapsed into partnered versus unpartnered categories to assess social support influences. The type of reporting source identified the institution or data source contributing to each case and the year of diagnosis (2018-2022) was treated as a categorical variable. Overall, these demographic factors contextualize differences in clinical presentation and treatment patterns across the study population.
 
 
 Table 1
